--- a/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.html
+++ b/src/main/java/ar/edu/itba/paw/web/movie/AddEditMoviePage.html
@@ -39,8 +39,8 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="genres"><wicket:message key="enterGenre" /> <span
-								class="glyphicon glyphicon-asterisk"></span> (<wicket:message
+							<label for="genres"><wicket:message key="enterGenre" />
+								<span class="glyphicon glyphicon-asterisk"></span> (<wicket:message
 									key="chooseAtLeastOne" />)</label>
 							<div class="input-group">
 								<span wicket:id="genres"></span>
@@ -80,8 +80,10 @@
 						</div>
 						<div class="form-group">
 							<label for="file-picker"><wicket:message key="enterPic" /></label>
-							<input id="file-picker" type="file" path="picture" /> <input
-								type="checkbox" wicket:id="deletePicture">
+							<input id="file-picker" wicket:id="file-picker" type="file"
+								class="file" data-max-file-count=1
+								data-allowed-file-types="image"></input> <input type="checkbox"
+								wicket:id="deletePicture">
 							<wicket:container wicket:id="deletePicText" />
 							</input>
 						</div>
