--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
@@ -10,6 +10,7 @@
 			<div wicket:enclosure="noComments">
 				<br />
 				<p wicket:id="noComments" class="text-center"></p>
+				<p class="text-center"><a href="#" wicket:id="users"><wicket:message key="goToUsers"/></a></p>
 				<br />
 			</div>
 			<wicket:container wicket:id="interestingComments">
