--- a/src/main/java/ar/edu/itba/paw/web/homepage/ReleasesPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/ReleasesPanel.html
@@ -7,11 +7,11 @@
 					<wicket:message key="releases" />
 				</h2>
 			</div>
-			<div wicket:id="releases.movie" class="panel panel-default">
+			<div wicket:id="releases.movie" class="panel">
 				<a href="#" wicket:id="movieLink"><div wicket:id="title"
 						class="panel-heading" /></a>
 				<div class="panel-body">
-					<p wicket:id="ShortSummary" />
+					<p wicket:id="summary" />
 				</div>
 			</div>
 			<div wicket:enclosure="noReleases">
