--- a/src/main/java/ar/edu/itba/paw/web/homepage/TopPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/TopPanel.html
@@ -14,7 +14,7 @@
 						<td></td>
 						<td><a href="#" wicket:id="details"><wicket:container
 										wicket:id="title" /></a></td> 
-						<td wicket:id="summary">Summary</td>
+						<td><wicket:container wicket:id="shortSummary"/>...</td>
 					</tr>
 				</tbody>
 			</table>
