--- a/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/homepage/InterestingCommentsPanel.html
@@ -9,7 +9,7 @@
 			</div>
 			<div wicket:enclosure="noComments">
 				<br />
-				<p wicket:id="noComments" class="text-center"></p>
+				<p wicket:id="noComments" class="text-center" />
 				<p class="text-center"><a href="#" wicket:id="users"><wicket:message key="goToUsers"/></a></p>
 				<br />
 			</div>
