--- a/src/main/java/ar/edu/itba/paw/web/user/register/RegisterPage.html
+++ b/src/main/java/ar/edu/itba/paw/web/user/register/RegisterPage.html
@@ -7,70 +7,71 @@
 					<form role="form" method="post" wicket:id="registerForm">
 						<div wicket:id="feedback" class="alert alert-danger" role="alert" />
 						<div class="form-group">
-							<label for="firstName"><wicket:message key="enterName"/></label>
+							<label for="firstName"><wicket:message key="enterName" /></label>
 							<div class="input-group">
 								<input type="text" wicket:id="firstName" class="form-control"
 									name="firstName" id="firstName" placeholder="Enter Name" /> <span
 									class="input-group-addon"><span
 									class="glyphicon glyphicon-asterisk"></span> <wicket:message
-										key="required"/></span>
+										key="required" /></span>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="lastName"><wicket:message key="enterLastName"/></label>
+							<label for="lastName"><wicket:message key="enterLastName" /></label>
 							<div class="input-group">
 								<input type="text" wicket:id="lastName" class="form-control"
 									name="lastName" id="lastName" placeholder="Enter Name" /> <span
 									class="input-group-addon"><span
 									class="glyphicon glyphicon-asterisk"></span> <wicket:message
-										key="required"/></span>
+										key="required" /></span>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="email"><wicket:message key="enterEmail"/></label>
+							<label for="email"><wicket:message key="enterEmail" /></label>
 							<div class="input-group">
 								<input type="text" wicket:id="email" class="form-control"
 									name="email" id="email" placeholder="Enter Email" /> <span
 									class="input-group-addon"><span
 									class="glyphicon glyphicon-asterisk"></span> <wicket:message
-										key="required"/></span>
+										key="required" /></span>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="password"><wicket:message key="enterPassword"/></label>
+							<label for="password"><wicket:message key="enterPassword" /></label>
 							<div class="input-group">
 								<input type="password" wicket:id="password" class="form-control"
 									name="password" id="password" placeholder="Enter Password" />
 								<span class="input-group-addon"><span
 									class="glyphicon glyphicon-asterisk"></span> <wicket:message
-										key="required"/></span>
+										key="required" /></span>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="passwordConfirmation"><wicket:message
-									key="confirmPass"/></label>
+									key="confirmPass" /></label>
 							<div class="input-group">
 								<input type="password" wicket:id="confirmPassword"
 									class="form-control" name="confirmPassword"
 									id="confirmPassword" placeholder="Enter Password" /> <span
 									class="input-group-addon"><span
 									class="glyphicon glyphicon-asterisk"></span> <wicket:message
-										key="required"/></span>
+										key="required" /></span>
 							</div>
 						</div>
 						<div class="form-group">
-							<label for="birthday"><wicket:message
-									key="enterBirthday"/></label> <input
-								name="birthday" data-date-format="yy-mm-dd" class="form-control" wicket:id="birthday"
-								id="birthDatepicker" cssClass="birthDatepicker" />
+							<label for="birthday"><wicket:message key="enterBirthday" /></label>
+							<input name="birthday" data-date-format="yy-mm-dd"
+								class="form-control" wicket:id="birthday" id="birthDatepicker"
+								cssClass="birthDatepicker" /> <span class="input-group-addon"><span
+								class="glyphicon glyphicon-asterisk"></span> <wicket:message
+									key="required" /></span>
 						</div>
 						<div class="form-group">
-							<label for="captcha"><wicket:message
-									key="enterCaptcha"/></label> 
-									<wicket:container wicket:id="captchaPanel"/>
+							<label for="captcha"><wicket:message key="enterCaptcha" /></label>
+							<wicket:container wicket:id="captchaPanel" />
 						</div>
 						<input type="submit" name="submit" value="Submit"
-										class="btn btn-primary btn-block"/>
+							class="btn btn-primary btn-block" />
 					</form>
 				</div>
 			</div>
