some bugs solved

--- a/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentsPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/comment/MovieCommentsPanel.html
@@ -46,6 +46,7 @@
 							<wicket:container wicket:id="commentCommentScorePanel" />
 						</dd>
 						<wicket:container wicket:id="scoreCommentForm" />
+						<wicket:container wicket:id="reportCommentPanel"/>
 						<br />
 						<wicket:container wicket:id="deleteCommentForm" />
 					</div>
