--- a/src/main/java/ar/edu/itba/paw/web/comment/ScoreCommentFormPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/comment/ScoreCommentFormPanel.html
@@ -14,7 +14,7 @@
 							</div>
 						</dd>
 						<br/>
-					<wicket:container wicket:id="reportCommentPanel"/>
+<!-- 					<wicket:container wicket:id="reportCommentPanel"/> -->
 	</wicket:panel>
 </body>
 </html>
