no more feedback panel in score comment

--- a/src/main/java/ar/edu/itba/paw/web/comment/ScoreCommentFormPanel.html
+++ b/src/main/java/ar/edu/itba/paw/web/comment/ScoreCommentFormPanel.html
@@ -6,7 +6,7 @@
 			<div class="input-group">
 				<form role="form" action="app/comments/score" method="post"
 					wicket:id="scoreCommentForm">
-					<div wicket:id="feedback" class="alert alert-danger" role="alert" />
+<!-- 					<div wicket:id="feedback" class="alert alert-danger" role="alert" /> -->
 					<input wicket:id="score" type="number" class="form-control"
 						name="score" id="score" /> <input type="submit" name="submit"
 						id="submit" value="Score" class="btn btn-primary">
